--- a/front/package.json
+++ b/front/package.json
@@ -14,7 +14,8 @@
     "@types/three": "^0.169.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "three": "^0.170.0"
+    "three": "^0.170.0",
+    "uuid": "^11.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
