--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,8 @@
     "@types/three": "^0.169.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-spinner": "^0.2.7",
+    "react-spinners": "^0.14.1",
     "three": "^0.170.0",
     "uuid": "^11.0.2"
   },
