--- a/.github/workflows/main_fa-junction24.yml
+++ b/.github/workflows/main_fa-junction24.yml
@@ -25,9 +25,9 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-
-      - name: choose backend directory
-      - run: cd back
+      
+      - name: enter correct directory
+      - run: cd back/
 
       - name: Create and start virtual environment
         run: |
@@ -55,6 +55,7 @@ jobs:
     needs: build
     
     permissions:
+      id-token: write #This is required for requesting the JWT
 
     steps:
       - name: Download artifact from build job
@@ -65,6 +66,18 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip     
         
+      - name: Login to Azure
         uses: azure/login@v2
-          client-id: ${{ secrets.__clientidsecretname__ }}
-          subscription-id: ${{ secrets.__subscriptionidsecretname__ }}
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_3E56A6693FB842C6A9004383DFDABAA4 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_E258496D8A1A4B0790A8B6C3879342A0 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_7607A13E55F6404FAE49DE7E3470258D }}
+
+      - name: 'Deploy to Azure Functions'
+        uses: Azure/functions-action@v1
+        id: deploy-to-function
+        with:
+          app-name: 'fa-junction24'
+          slot-name: 'Production'
+          package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+          
