--- a/.github/workflows/main_fa-junction24.yml
+++ b/.github/workflows/main_fa-junction24.yml
@@ -11,7 +11,7 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: './back' # set this to the path to your web app project, defaults to the repository root
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
   PYTHON_VERSION: '3.11' # set this to the python version to use (supports 3.6, 3.7, 3.8)
 
 jobs:
@@ -31,9 +31,6 @@ jobs:
           python -m venv venv
           source venv/bin/activate
 
-      - name: enter correct directory
-        run: cd back
-
       - name: Debug info
         run: pwd && ls -la
 
@@ -43,7 +40,7 @@ jobs:
       # Optional: Add step to run tests here
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip release.zip ./back/* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
