--- a/.github/workflows/main_fa-junction24.yml
+++ b/.github/workflows/main_fa-junction24.yml
@@ -35,7 +35,7 @@ jobs:
         run: pwd && ls -la
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install -r ./back/requirements.txt
 
       # Optional: Add step to run tests here
 
