--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,8 @@
     "@react-three/drei": "^9.115.0",
     "@react-three/fiber": "^8.17.10",
     "@types/three": "^0.169.0",
+    "dotenv": "^16.4.5",
+    "dotenv-webpack": "^8.1.0",
     "leva": "^0.9.35",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
