--- a/.github/workflows/main_fa-junction24.yml
+++ b/.github/workflows/main_fa-junction24.yml
@@ -26,16 +26,8 @@ jobs:
         with:
           python-version: ${{ env.PYTHON_VERSION }}
 
-      - name: Create and start virtual environment
-        run: |
-          python -m venv venv
-          source venv/bin/activate
-
-      - name: Debug info
-        run: pwd && ls -la
-
       - name: Install dependencies
-        run: pip install -r ./back/requirements.txt
+        run: pip install -r ./back/requirements.txt --target .python_packages/lib/site-packages
 
       # Optional: Add step to run tests here
 
