--- a/.github/workflows/backend_deplyoment.yml
+++ b/.github/workflows/backend_deplyoment.yml
@@ -27,7 +27,7 @@ jobs:
           python-version: ${{ env.PYTHON_VERSION }}
 
       - name: Install dependencies
-        run: pip install -r ./back/requirements.txt --target .python_packages/lib/site-packages
+        run: pip install --target .python_packages/lib/site-packages -r ./back/requirements.txt 
 
       # Optional: Add step to run tests here
 
