--- a/.github/workflows/backend_deplyoment.yml
+++ b/.github/workflows/backend_deplyoment.yml
@@ -27,7 +27,7 @@ jobs:
           python-version: ${{ env.PYTHON_VERSION }}
 
       - name: Install dependencies
-        run: pip install --target .python_packages/lib/site-packages -r ./back/requirements.txt 
+        run: cd ./back/ && python3 -m venv venv && source venv/bin/activate && pip install -r requirements.txt 
 
       # Optional: Add step to run tests here
 
@@ -40,7 +40,7 @@ jobs:
           name: python-app
           path: |
             release.zip
-            !.python_packages/
+            !venv/
 
   deploy:
     runs-on: ubuntu-latest
