--- a/.github/workflows/backend_deplyoment.yml
+++ b/.github/workflows/backend_deplyoment.yml
@@ -32,7 +32,7 @@ jobs:
       # Optional: Add step to run tests here
 
       - name: Zip artifact for deployment
-        run: cd ./back/ zip release.zip ./* -r
+        run: cd ./back/ && zip release.zip ./* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
