--- a/.github/workflows/backend_deplyoment.yml
+++ b/.github/workflows/backend_deplyoment.yml
@@ -57,4 +57,4 @@ jobs:
         with:
           app-name: 'fa-junction24'
           slot-name: 'Production'
-          package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+          package: release.zip
