--- a/.github/workflows/backend_deplyoment.yml
+++ b/.github/workflows/backend_deplyoment.yml
@@ -1,49 +1,41 @@
-name: Build and deploy Python project to Azure Function App - fa-junction24
+name: Deploy Azure Function App
 
 on:
   push:
     branches:
-      - main
-  workflow_dispatch:
-
-env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: './back'
-  PYTHON_VERSION: '3.11'
+      - main  # Deploy when pushing to the main branch
+  workflow_dispatch:  # Allow manual triggers
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Zip artifact for deployment
-        run: |
-          cd back
-          zip ../release.zip ./* -r --exclude 'venv/*'
-
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
-        with:
-          name: python-app
-          path: release.zip
-
   deploy:
+    name: Deploy to Azure Function App
     runs-on: ubuntu-latest
-    needs: build
-    
-    permissions:
-      id-token: write #This is required for requesting the JWT
 
     steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
-        with:
-          name: python-app
+      # Step 1: Checkout the repository
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Unzip artifact for deployment
-        run: unzip release.zip     
-        
+      # Step 2: Set up Python environment
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'  # Adjust the Python version as needed
+
+      # Step 3: Install Azure Functions Core Tools
+      - name: Install Azure Functions Core Tools
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y azure-functions-core-tools-4
+
+      # Step 4: Navigate to the back directory and install dependencies
+      - name: Install dependencies
+        working-directory: ./back
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      # Step 5: Log in to Azure
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -51,10 +43,14 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_E258496D8A1A4B0790A8B6C3879342A0 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_7607A13E55F6404FAE49DE7E3470258D }}
 
-      - name: 'Deploy to Azure Functions'
-        uses: Azure/functions-action@v1
-        id: deploy-to-function
-        with:
-          app-name: 'fa-junction24'
-          slot-name: 'Production'
-          package: release.zip
+
+      # Step 6: Deploy the Function App
+      - name: Deploy Function App
+        working-directory: ./back
+        run: |
+          func azure functionapp publish fa-junction24
+
+      # Optional: Cleanup
+      - name: Clean up Python cache
+        run: |
+          find . | grep -E "(__pycache__|\.pyc|\.pyo$)" | xargs rm -rf
