--- a/.github/workflows/backend_deplyoment.yml
+++ b/.github/workflows/backend_deplyoment.yml
@@ -36,13 +36,10 @@ jobs:
           pip install -r requirements.txt
 
       # Step 5: Log in to Azure
-      - name: Login to Azure
-        uses: azure/login@v2
+      - name: Log in to Azure
+        uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_3E56A6693FB842C6A9004383DFDABAA4 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_E258496D8A1A4B0790A8B6C3879342A0 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_7607A13E55F6404FAE49DE7E3470258D }}
-
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       # Step 6: Deploy the Function App
       - name: Deploy Function App
