--- a/.github/workflows/backend_deplyoment.yml
+++ b/.github/workflows/backend_deplyoment.yml
@@ -41,11 +41,17 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      # Step 6: Deploy the Function App
+      # Step 6
+      - name: Initialize function app
+        working-directory: ./back
+        run: |
+          func init
+
+      # Step 7: Deploy the Function App
       - name: Deploy Function App
         working-directory: ./back
         run: |
-          func azure functionapp publish fa-junction24 --python
+          func azure functionapp publish fa-junction24
 
       # Optional: Cleanup
       - name: Clean up Python cache
