--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -1,4 +1,28 @@
-opencv-python
-matplotlib
-cairosvg
-numpy
+blinker==1.9.0
+cairocffi==1.7.1
+CairoSVG==2.7.1
+cffi==1.17.1
+click==8.1.7
+contourpy==1.3.0
+cssselect2==0.7.0
+cycler==0.12.1
+defusedxml==0.7.1
+Flask==3.0.3
+Flask-Cors==5.0.0
+fonttools==4.54.1
+itsdangerous==2.2.0
+Jinja2==3.1.4
+kiwisolver==1.4.7
+MarkupSafe==3.0.2
+matplotlib==3.9.2
+numpy==2.1.3
+opencv-python==4.10.0.84
+packaging==24.2
+pillow==11.0.0
+pycparser==2.22
+pyparsing==3.2.0
+python-dateutil==2.9.0.post0
+six==1.16.0
+tinycss2==1.4.0
+webencodings==0.5.1
+Werkzeug==3.1.3
