--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -10,6 +10,7 @@ defusedxml==0.7.1
 Flask==3.0.3
 Flask-Cors==5.0.0
 fonttools==4.54.1
+gunicorn==23.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 kiwisolver==1.4.7
