--- a/back/dockerfile
+++ b/back/dockerfile
@@ -15,4 +15,6 @@ COPY . .
 ENV FLASK_APP=server.py
 ENV FLASK_RUN_HOST=0.0.0.0
 
+EXPOSE 5000
+
 CMD ["gunicorn", "-w", "4", "-b", "0.0.0.0:5000", "server:app"]
